[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkeywords"
version = "0.1.0"
description = "AI-powered SEO keyword generation using Gemini + SE Ranking"
readme = "README.md"
license = "MIT"
authors = [
    { name = "SCAILE Technologies", email = "hello@scaile.tech" }
]
keywords = ["seo", "keywords", "ai", "gemini", "content-marketing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.3.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
openkeywords = "openkeywords.cli:main"

[project.urls]
Homepage = "https://github.com/scaile/openkeywords"
Documentation = "https://github.com/scaile/openkeywords"
Repository = "https://github.com/scaile/openkeywords"

[tool.hatch.build.targets.wheel]
packages = ["openkeywords"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]


