[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkeyword"
version = "2.0.0"
description = "AI-powered SEO keyword generation using 5-stage pipeline with Google Gemini"
readme = "README.md"
license = "MIT"
authors = [
    { name = "SCAILE Technologies", email = "hello@scaile.tech" }
]
keywords = ["seo", "keywords", "ai", "gemini", "keyword-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/federicodeponte/openkeyword"
Repository = "https://github.com/federicodeponte/openkeyword"

[tool.hatch.build.targets.wheel]
packages = ["shared", "stage1", "stage2", "stage3", "stage4", "stage5"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
